# LLM_PDF_Translator

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  st.py  styles.py
.github/workflows/: docker.yml
core/: extract.py  prompt.py  summarize.py  translate.py
core/client/: base.py  ollama.py  openai.py
