[project]
name = "pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "openai>=1.106.1",
    "pymupdf4llm>=0.0.27",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.49.1",
]
